style.css
.pokemon-header {
  font-family: "Pokemon Solid", sans-serif;
  background-color: rgb(15, 83, 185);
  text-align: center;
  margin: auto;
  width: 50%;
  border: 5px solid rgb(77, 54, 5);
}

.team-builder {
  float: left;
  padding-left: 100px;
  width: 50%;
}

body {
  background-color: rgb(62, 62, 199);
}

#add-pokemon {
  margin: 0;
  top: 50%;
}

#name {
  font-family: "Courier New", Courier, monospace;
  font-size: 15px;
}

#type1 {
  font-family: "Courier New", Courier, monospace;
  font-size: 15px;
}

#type2 {
  font-family: "Courier New", Courier, monospace;
  font-size: 15px;
}

#ability {
  font-family: "Courier New", Courier, monospace;
  font-size: 15px;
}
.header-1 {
  font-family: "Pokemon Solid", sans-serif;
  color: rgb(63, 9, 9);
  font-size: 40px;
}

#pokemon-move-list {
  display: flex;
}

#p-move1 {
  padding-right: 20px;
}

#p-move2 {
  padding-right: 20px;
}

#p-move3 {
  padding-right: 20px;
}

#p-move4 {
  padding-right: 20px;
}

.header-2 {
  font-family: "Pokemon Solid", sans-serif;
  font-size: 40px;
  color: #4d6ad8;
  text-align: left;
  margin: 0 0 0.5em;
  top: -0.75em;
  left: 1em;
}

.Team-1-Display {
  display: flex;
  gap: 10px;
  flex-direction: row;
}

.Team-2-Display {
  display: flex;
  gap: 10px;
  flex-direction: row;
}

.modal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  visibility: hidden;
  transform: scale(1.1);
  text-align: justify;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: medium;
}

.modal button {
  display: flex;
  justify-content: center;
  margin: auto;
}

.modal select {
  display: flex;
  justify-content: center;
  position: relative;
  top: -75px;
  left: 50px;
  margin: auto;
}

.show-modal {
  opacity: 1;
  visibility: visible;
  transform: scale(1);
  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
}

.modal-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 1rem 1.5rem;
  width: 24rem;
  border-radius: 0.5rem;
}

.close {
  float: right;
  width: 1.5rem;
  line-height: 1.5rem;
  text-align: center;
  cursor: pointer;
  border-radius: 0.25rem;
  background-color: lightgray;
}

.close:hover {
  background-color: darkgray;
}

.show-modal {
  opacity: 1;
  visibility: visible;
  transform: scale(1);
  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
}

#background-img {
  position: relative;
}

#image {
  position: absolute;
  z-index: 1;
}

.team-display {
  display: grid;
  grid-template-columns: 1fr;
  max-width: 26em;
  box-sizing: content-box;
}

section {
  background: #c7c7c7;
  border-radius: 1em;
  border: 0.0625em solid #d6bbbb;
  padding: 1.25em 1em 1em;
}

#team1 {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  align-content: center;
  gap: 1em 0;
  justify-content: space-evenly;
  flex-wrap: wrap;
}
#team2 {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  align-content: center;
  gap: 1em 0;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

